# Portfolio

./: README.md
10 minutes to mars/10-MINUTES-TO-MARS programa/: main.py
Android Studio/Calculadora/: settings.gradle
Android Studio/Calculadora/app/: build.gradle
Android Studio/Calculadora/gradle/wrapper/: gradle-wrapper.properties
Android Studio/CoronaIbarra_p1/CoronaIbarra_p1/: settings.gradle
Android Studio/CoronaIbarra_p2/SegundoExamen/: settings.gradle
Android Studio/Notes/app/: build.gradle.kts
Android Studio/Pizzeria/app/: build.gradle
Android Studio/Unit Conversor/UnitConversor/: settings.gradle
Biología computacional_ Covid/: Proyecto_biocompu.Rmd
C++ Programs/Binnacle/: Bitacora.cpp  Bitacora.h  Fecha.cpp  Fecha.h  impresion.txt  main.cpp
C++ Programs/Shipping/: Envio.cpp  Envio.h  Paquete.h  Sobre.cpp
C++ Programs/Shopping cart/: Comida.cpp  Juguete.cpp  Limpieza.cpp  Limpieza.h  pruebas.txt
C++ Programs/SnakesAndLadders/: Dice.h  MyGame.cpp  Pruebas.txt  README.txt
C++ Programs/Video system/: Pelicula.cpp  Pelicula.h  Serie.h  series.csv
Carrito supermercado/: Comida.h  Juguete.h  main.cpp
Envio/: Paquete.cpp  Pruebas.txt  Sobre.h  main.cpp
Geogebra/Formula one Physics/: F1 circuit.ggb
Juego 10 minutes to mars/10-MINUTES-TO-MARS programa/: pyproject.toml
MARIE Simulator/: Name and career.mas  Y=5_(A-B+C).mas  _Y=X-2_A-3_B-4_C.mas
Proyecto Volcan/: main.py
Proyecto videos/: Serie.cpp  Video.cpp  Video.h  casos de prueba.txt  main.cpp  peliculas.csv
SerpientesYEscaleras/: Dice.cpp  Player.cpp  Player.h  Snakes.cpp
(+104 files in other folders)
